31-07-2021 : Eduprov : Add New Meta tags Schema org add new keywords and remove min and max length in application form

--- a/bachelor-of-physical-education.html
+++ b/bachelor-of-physical-education.html
@@ -35,8 +35,8 @@
     }
     </script>
   <meta name="description" content="Bachelor of Physical Education or B.P.Ed is a bachelor's degree program that deals with educating people on the importance of sports and physical fitness. Generally, this course is offered as a three or four-year degree">
-  <meta name="keywords" content=" 
-  
+  <meta name="keywords" content=" bachelor of physical education admission 2020bachelor of physical education admissionbachelor of physical education entrance exam 2020bachelor of physical education admission 2021bachelor of physical education bachelor of physical education admission
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bachelor of Physical Education Admission Guidance in Bangalore" />
