--- a/bams-course.html
+++ b/bams-course.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="https://eduprov.com/bams-course.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAMS Admission Guidance in Bangalore</title>
+    <title>Bachelor of Ayurvedic Medicine and Surgery Admission Guidance in Bangalore</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -35,8 +35,8 @@
       }
       </script>
     <meta name="description" content="BAMS or Bachelor of Ayurvedic Medicine and Surgery is an integrated Indian medical undergraduate degree program that offers students a wonderful and useful mixture of both modern medicine and traditional knowledge of Ayurveda.">
-    <meta name="keywords" content=" 
-    
+    <meta name="keywords" content=" bachelor of ayurvedic medicine and surgery,bachelor of ayurvedic medicine and surgery admission,bachelor of ayurvedic medicine and surgery distance education,bachelor of ayurvedic medicine and surgery course,
+
     ">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="BAMS Admission Guidance in Bangalore" />
@@ -90,7 +90,7 @@
       
     <div class="row">
       <div class="col-md-8 mt-5 pt-3">
-        <h1 class="text-dark">BAMS</h1>
+        <h1 class="text-dark">Bachelor of Ayurvedic Medicine and Surgery</h1>
       </div>
     </div>
   </div>
