--- a/bangalore-institute-of-technology.html
+++ b/bangalore-institute-of-technology.html
@@ -35,8 +35,8 @@
     }
     </script>
   <meta name="description" content="Bangalore Institute of Technology (BIT) was started in the year 1979 with the Intention of providing quality education in the field of technology and thereby serving the society. BIT is one of the best colleges affiliated with Visvesvaraya Technological University (VIT)">
-  <meta name="keywords" content=" 
-  
+  <meta name="keywords" content=" bangalore institute of technology,bangalore technological institute,bangalore institute of technology ranking,bangalore institute of technology fees,bangalore institute of technology nirf ranking,bangalore institute of technology admission,bangalore institute of technology course admissions,bangalore institute of technology comedk,bangalore institute of technology admission 2020,bangalore institute of technology campus area,bangalore institute of technology hostel fees,bangalore institute of technology vv puram,bangalore institute of technology saandip,bangalore technological institute ranking,bangalore institute of technology mba,bangalore institute of technology hostel,bangalore institute of technology kr road vv puram,bangalore institute of technology admission procedure,bangalore institute of technology faculty,bangalore institute of technology admission through jee mains,bangalore institute of technology application form 2020,bangalore institute of technology website,bangalore institute of technology campus,bangalore institute of technology kr road,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bangalore Institute of Technology Admission Guidance in Bangalore" />
