--- a/banking-finance-course.html
+++ b/banking-finance-course.html
@@ -35,8 +35,8 @@
       }
       </script>
     <meta name="description" content=" MBA in Finance and insurance is a postgraduate course that can be achieved by students of any stream. This is a two-year program that will cover all the basics and concepts in the sector of finance and insurance. ">
-    <meta name="keywords" content=" 
-    
+    <meta name="keywords" content=" mba banking and finance,mba in banking,mba in investment banking,mba in digital finance and banking,best mba for investment banking,best mba programs for investment banking,mba in banking and finance colleges,mba digital finance and banking,mba in bfsi,mba in digital banking and finance,mba in banking and finance top universities,mba in banking and finance fees,best mba for banking,mba from iibf,mba in banking and finance course details,mba in banking and financial services,banking and finance course in ignou,ignou iibf mba,mba in global banking and finance,best colleges for mba in banking and finance,mba courses for banking sector,executive mba in banking and finance,colleges for mba in banking and finance,banking mba programs,mba with banking and finance,mba banking and finance admission,
+
     ">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="MBA Banking and Finance Admission Guidance in Bangalore" />
