--- a/bnys-course.html
+++ b/bnys-course.html
@@ -2,94 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BNYS Admission Eligibility Scope| Eduprov</title>
-  <meta name="description"
-    content="Bachelor of Naturopathy & Yogic Science deals with ancient & traditional ayurvedic treatment methods. Get update on college admission, entrance, scope @ EDUPROV">
-  <meta name="keywords" content="Bachelor of Naturopathy & Yogic Science, Bachelor of Naturopathy & Yogic Science Admission, Bachelor of Naturopathy & Yogic Science Course Details, Bachelor of Naturopathy & Yogic Science Admission Bangalore , Bachelor of Naturopathy & Yogic Science Career, Bachelor of Naturopathy & Yogic Science eligibility, Bachelor of Naturopathy & Yogic Science admission criteria, Bachelor of Naturopathy & Yogic Science Bangalore colleges, Bachelor of Naturopathy & Yogic Science college admission, Bachelor of Naturopathy & Yogic Science Course , what is Bachelor of Naturopathy & Yogic Science , Admission for Bachelor of Naturopathy & Yogic Science course , Bachelor of Naturopathy & Yogic Science Bangalore colleges admission, Bachelor of Naturopathy & Yogic Science colleges , Bachelor of Naturopathy & Yogic Science admissions, Bachelor of Naturopathy & Yogic Science course admission, Bachelor of Naturopathy & Yogic Science scope, Bachelor of Naturopathy & Yogic Science jobs, BNYS Admission, BNYS  Course Details, BNYS Admission Bangalore , BNYS Career, BNYS eligibility, BNYS admission criteria, BNYS college admission, BNYS Bangalore colleges, BNYS Course , BNYS course admission, BNYS  Bangalore colleges, BNYS  college admission, BNYS  Course , what is BNYS  , Admission for BNYS  course , BNYS  Bangalore colleges admission, BNYS  colleges , BNYS  admissions, BNYS  course admission, BNYS  scope, BNYS  jobs, bnys full form,bnys meaning,bnys college,bnys full form in medical,full form of bnys,bachelor of naturopathy and yogic science,bachelor of naturopathy & yogic science,bnys medical course,bnys admission,bachelor of naturopathy and yoga,bnys long form,bachelor in yoga and naturopathy,bnys eligibility criteria,bnys details,bachelor of naturopathy and yoga science,meaning of bnys,after bnys,duration of bachelor of naturopathy and yogic science course is,bnys medical college,bachelor degree in yoga and naturopathy,bachelor in naturopathy & yogic sciences,bnys medicine,eligibility for bnys,
-">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/bnys-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bachelor Of Naturopathy & Yogic Science Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/bnys-course.html"
+        },
+        "headline": "Bachelor Of Naturopathy & Yogic Science Admission Guidance in Bangalore",
+        "description": "Naturopathy and Yogic science is a sort of prescribed medication which heals and support the patient in a philosophical way. It isn't kind of supplement, it works around the own recovery of the body like enhancing the immunity and detoxification",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-31",
+        "dateModified": "2021-07-31"
+      }
+      </script>
+    <meta name="description" content="Naturopathy and Yogic science is a sort of prescribed medication which heals and support the patient in a philosophical way. It isn't kind of supplement, it works around the own recovery of the body like enhancing the immunity and detoxification">
+    <meta name="keywords" content=" 
+    
+    ">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bachelor Of Naturopathy & Yogic Science Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/bnys-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="Naturopathy and Yogic science is a sort of prescribed medication which heals and support the patient in a philosophical way. It isn't kind of supplement, it works around the own recovery of the body like enhancing the immunity and detoxification" />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="Bachelor Of Naturopathy & Yogic Science Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="Naturopathy and Yogic science is a sort of prescribed medication which heals and support the patient in a philosophical way. It isn't kind of supplement, it works around the own recovery of the body like enhancing the immunity and detoxification" />
+    <meta name="twitter:image" content="#" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor Of Naturopathy & Yogic Science (BNYS)</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor Of Naturopathy & Yogic Science</h1>
       </div>
     </div>
   </div>
+  
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -127,7 +133,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -148,7 +154,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Subjects
           </h2>
         </div>
