--- a/bsc-agriculture-course.html
+++ b/bsc-agriculture-course.html
@@ -2,94 +2,101 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Agriculture Admission Eligibility Scope | Eduprov</title>
-  <meta name="description"
-    content="BSc Agriculture focuses on agricultural science & its principles. To get information on admission, eligibility, college, exam, career & scope visit EDUPROV">
-  <meta name="keywords" content="bsc agriculture,bsc agri,bsc agriculture college,bsc agriculture course,bsc agri college,bsc agriculture course details,after bsc agriculture,about bsc agriculture,bsc agriculture colleges near me,best college for bsc agriculture,private agriculture college,best agriculture college,bsc agriculture information,bsc agriculture qualification,bsc agriculture years,bsc agri courses,bsc agree information,bsc agriculture details,courses after bsc agriculture,bsc agriculture degree,bsc agriculture private college,bsc agriculture colleges in,bsc agri information,bsc agriculture science,bsc agriculture top colleges,hons agriculture,requirement for bsc agriculture,about bsc agriculture course,bsc agriculture 2020,for bsc agriculture,after bsc agriculture which course is best,best private college for bsc agriculture,bsc agriculture after 12th,best course in bsc agriculture,bsc agri course details,bsc agriculture after 10th class,agriculture study after 12th,bsc agri online,all about bsc agriculture,bsc agriculture after 10th,agriculture after 12th,bsc agri colleges near me,bsc agriculture is a professional course,bsc agriculture types,bsc agriculture meaning,bsc agri study,apply for bsc agriculture,bsc agriculture from private college,bsc in agriculture colleges near me,bsc agriculture full details,bsc ag entrance,bsc agriculture course year,bsc agriculture near me,types of bsc agriculture,bsc with agriculture,bsc agriculture apply online,bsc agriculture full information,private bsc agriculture college,pg courses after bsc agriculture,bsc of agriculture,full details about bsc agriculture,kcet bsc agriculture,agriculture after 12th science,best course after bsc agriculture,bsc agriculture after 12th pcm,agriculture se bsc,bsc in agriculture course,bsc agriculture required qualification,qualification of bsc agriculture,bsc agriculture courses after 12th science,bsc agriculture in tamil,courses under bsc agriculture,bsc agriculture after courses,best private agriculture college,bsc agriculture 2021,bsc agriculture ke liye qualification,all information about bsc agriculture,graphic era bsc agriculture,msc after bsc agriculture,psg college bsc agriculture,bsc agriculture department,bsc agriculture practical,about bsc agri,top private college for bsc agriculture,agriculture in bsc,bsc agriculture details in hindi,after 12th bsc agriculture,information about bsc agriculture course,best college for agriculture bsc,agriculture bsc details,courses of bsc agriculture,bsc agriculture all information,agriculture bsc colleges near me,top private agriculture college,after agriculture bsc courses,after 10th bsc agriculture,bsc organic farming,bsc ag agriculture,bsc agri online apply,agriculture after 12 science,about agriculture bsc course,college bsc agriculture,full information about bsc agriculture,courses in agriculture bsc,agriculture course after bsc,qualification for agriculture bsc,bsc agriculture integrated course,loyola academy bsc agriculture,bsc agriculture apply,bsc agriculture about,bsc agriculture professional degree,best colleges for bsc in agriculture,bsc agricalchar college,best msc courses after bsc agriculture,bsc agriculture doctorate degree,top colleges in bsc agriculture,after bsc in agriculture,study in agriculture after 12th,bsc agriculture course information,bsc courses agriculture,bsc agri degree,
-     ">
-  <meta name="author" content="Naveen">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/bsc-agriculture-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BSc Agriculture Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/bsc-agriculture-course.html"
+        },
+        "headline": "BSc Agriculture Admission Guidance in Bangalore",
+        "description": "B.Sc Agriculture or Bachelor of Science is an undergraduate degree awarded by Universities of Agriculture and Agriculture colleges. The course duration is 4 years. It is considered a “Professional” degree by the Government of India.",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-31",
+        "dateModified": "2021-07-31"
+      }
+      </script>
+    <meta name="description" content="B.Sc Agriculture or Bachelor of Science is an undergraduate degree awarded by Universities of Agriculture and Agriculture colleges. The course duration is 4 years. It is considered a “Professional” degree by the Government of India.">
+    <meta name="keywords" content=" 
+    
+    ">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="BSc Agriculture Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/bsc-agriculture-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="B.Sc Agriculture or Bachelor of Science is an undergraduate degree awarded by Universities of Agriculture and Agriculture colleges. The course duration is 4 years. It is considered a “Professional” degree by the Government of India." />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="BSc Agriculture Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="B.Sc Agriculture or Bachelor of Science is an undergraduate degree awarded by Universities of Agriculture and Agriculture colleges. The course duration is 4 years. It is considered a “Professional” degree by the Government of India." />
+    <meta name="twitter:image" content="#" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BSc Agriculture </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">BSc Agriculture</h1>
       </div>
     </div>
   </div>
+
+
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -122,7 +129,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -152,7 +159,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
