--- a/boptm-course.html
+++ b/boptm-course.html
@@ -2,94 +2,101 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Bachelor of Optometry Admission Eligibility Scope | Eduprov</title>
-  <meta name="description"
-    content="Bachelor of Optometry studies about eyes & its connected organs, ailment of the visual system & its cure. Know about admission, exam, colleges, scope at EDUPROV">
-  <meta name="keywords"
-    content="	Bachelor of Optometry Admission, Bachelor of Optometry Career, Bachelor of Optometry Colleges,Bachelor of Optometry Eligibility, Bachelor of Optometry Scope, BOPTM Admission, BOPTM Career, BOPTM Colleges,OPTM Eligibility, BOPTM full form, BOPTM Scope, what is BOPTM,admission counselor, admission in bangalore,  career counseling, career counseling in bangalore, admission consultant,admission, admissions, counselling, counseling,  bangalore counseling, abroad admission consultants, abroad education consultants, academic career coach,academic consultant in bangalore, admission, admission assistance , admission consultancy in bangalore, admission consultant, admission consultant in bangalore, admission consultant near me, admission guidance, admission guidance in bangalore, admission through management quota, admission through nri quota, bangalore university, best admission consultant in bangalore, best career guidance, best college admission consultant in bangalore, best colleges in bangalore, best education consultancy in bangalore, career counselling , career guidance, college, college admission, college admission assistance, college admission consultant in bangalore, college admission counselore near me, college admission guidance, college admission in bangalore, college admission information, college admission process, college admissions advice, college admissions consultant, college admissions counselor, college advisor, college consultant, college counselor, college  planning consultant, colleges in bangalore, direct admission, direct admission consultants, education,   education admission guidance, education counsellor, educational consultants in bangalore, educational   guidance, foreign studies consultants, genuine admission consultant, international admissions,    international education consultancy, international student admission, international university    admission, mba admission assistance, nursing admission, overseas education consultant, overseas    education consultants, overseas education consultants near me, para-medical colleges in bangalore, p   uc admission, school admission, school admission assistance, student consultants, study abroad consultant,   study abroad consultants in bangalore, university admission, bachelor of commerce, bachelor of commerce degree, bachelor of commerce subjects, bachelor of commerce jobs, bachelor of commerce short form, bachelor of commerce accounting and finance, bachelor of commerce meaning, bachelor of commerce in accounting and finance, bachelor of commerce canada, bachelor of commerce australia, bachelor of commerce accounting, bachelor of commerce courses, bachelor of commerce in india, bachelor of commerce result 2019">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/boptm-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bachelor of Optometry Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/boptm-course.html"
+        },
+        "headline": "Bachelor of Optometry Admission Guidance in Bangalore",
+        "description": "The Bachelor of Optometry and Vision Science deals with the study of the health issues related to vision. Here you study the function and structure of the visual system, the skills required for clinical assessment",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-31",
+        "dateModified": "2021-07-31"
+      }
+      </script>
+    <meta name="description" content="The Bachelor of Optometry and Vision Science deals with the study of the health issues related to vision. Here you study the function and structure of the visual system, the skills required for clinical assessment">
+    <meta name="keywords" content=" 
+    
+    ">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bachelor of Optometry Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/boptm-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="The Bachelor of Optometry and Vision Science deals with the study of the health issues related to vision. Here you study the function and structure of the visual system, the skills required for clinical assessment" />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="Bachelor of Optometry Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="The Bachelor of Optometry and Vision Science deals with the study of the health issues related to vision. Here you study the function and structure of the visual system, the skills required for clinical assessment" />
+    <meta name="twitter:image" content="#" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Optometry (BOPTM) </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Optometry</h1>
       </div>
     </div>
   </div>
+  
+
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -122,7 +129,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -140,7 +147,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Scope
           </h2>
         </div>
