--- a/bsc-accident-emergency-care-techno-course.html
+++ b/bsc-accident-emergency-care-techno-course.html
@@ -2,94 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title> BSc Accident & Emergency Care Technology Admission | Eduprov</title>
-  <meta name="description"
-    content="BSc Accident & Emergency Care edify students in medical emergency techniques. To know more about Eligibility, Admission, Top colleges & Career visit EDUPROV">
-  <meta name="keywords"
-    content="BSc Accident & Emergency CareTechnology , BSc Accident & Emergency CareTechnology  Admission, BSc Accident & Emergency CareTechnology  Course Details, BSc Accident & Emergency CareTechnology  Admission Bangalore , BSc Accident & Emergency CareTechnology  Career, BSc Accident & Emergency CareTechnology  eligibility, BSc Accident & Emergency CareTechnology  admission criteria, BSc Accident & Emergency CareTechnology  Bangalore colleges, BSc Accident & Emergency CareTechnology  college admission, BSc Accident & Emergency CareTechnology  Course , what is BSc Accident & Emergency CareTechnology  , Admission for BSc Accident & Emergency CareTechnology  course , BSc Accident & Emergency CareTechnology  Bangalore colleges admission, BSc Accident & Emergency CareTechnology  colleges , BSc Accident & Emergency CareTechnology  admissions, BSc Accident & Emergency CareTechnology  course admission, BSc Accident & Emergency CareTechnology  scope, BSc Accident & Emergency CareTechnology  jobs, B.Sc in A & E care technology Admission, Accident & Emergency CareTechnology  Course Details, B.Sc in A & E care technology Admission Bangalore , B.Sc in A & E care technology Career, B.Sc in A & E care technology eligibility, B.Sc in A & E care technology admission criteria, B.Sc in A & E care technology college admission, B.Sc in A & E care technology Bangalore colleges, B.Sc in A & E care technology Course , B.Sc in A & E care technology course admission, Accident & Emergency CareTechnology  Bangalore colleges, Accident & Emergency CareTechnology  college admission, Accident & Emergency CareTechnology  Course , what is Accident & Emergency CareTechnology  , Admission for Accident & Emergency CareTechnology  course , Accident & Emergency CareTechnology  Bangalore colleges admission, Accident & Emergency CareTechnology  colleges , Accident & Emergency CareTechnology  admissions, Accident & Emergency CareTechnology  course admission, Accident & Emergency CareTechnology  scope, Accident & Emergency CareTechnology  jobs,">
-  <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="canonical" href="https://eduprov.com/bsc-accident-emergency-care-techno-course.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bachelor of Science in accident and emergency care technology Admission Guidance in Bangalore</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://eduprov.com/bsc-accident-emergency-care-techno-course.html"
+        },
+        "headline": "Bachelor of Science in accident and emergency care technology Admission Guidance in Bangalore",
+        "description": "Bachelor of Science in accident and emergency care technology or B.Sc in A & E care technology is a course that trains interested students in the emergency and trauma care to have both intellectual knowledge and practical skills relevant to medical care in the field of emergency medicine.",
+        "image": "https://eduprov.com/images/favicon.png",  
+        "author": {
+          "@type": "Person",
+          "name": "thephotogenicbug"
+        },  
+        "publisher": {
+          "@type": "Organization",
+          "name": "Eduprov",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://eduprov.com/images/favicon.png"
+          }
+        },
+        "datePublished": "2021-07-31",
+        "dateModified": "2021-07-31"
+      }
+      </script>
+    <meta name="description" content="Bachelor of Science in accident and emergency care technology or B.Sc in A & E care technology is a course that trains interested students in the emergency and trauma care to have both intellectual knowledge and practical skills relevant to medical care in the field of emergency medicine.">
+    <meta name="keywords" content=" 
+    
+    ">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bachelor of Science in accident and emergency care technology Admission Guidance in Bangalore" />
+    <meta property="og:url" content="https://eduprov.com/bsc-accident-emergency-care-techno-course.html" />
+    <meta property="og:site_name" content="Eduprov Educational Institute" />
+    <meta property="og:description"
+      content="Bachelor of Science in accident and emergency care technology or B.Sc in A & E care technology is a course that trains interested students in the emergency and trauma care to have both intellectual knowledge and practical skills relevant to medical care in the field of emergency medicine." />
+    <meta property="og:image" content="#" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@eduprov" />
+    <meta name="twitter:title" content="Bachelor of Science in accident and emergency care technology Admission Guidance in Bangalore" />
+    <meta name="twitter:description"
+      content="Bachelor of Science in accident and emergency care technology or B.Sc in A & E care technology is a course that trains interested students in the emergency and trauma care to have both intellectual knowledge and practical skills relevant to medical care in the field of emergency medicine." />
+    <meta name="twitter:image" content="#" />
+    <meta name="twitter:url" content="https://twitter.com/eduprov" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <meta name="author" content="thephotogenicbug">
+    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="accordian.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Science in accident and emergency care technology </h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">Bachelor of Science in accident and emergency care technology</h1>
       </div>
     </div>
   </div>
+  
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
@@ -116,7 +122,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
+        <h2 class="text-center text-dark" id="tag-font">
           Eligibility
         </h2>
       </div>
@@ -144,7 +150,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-primary" id="tag-font">
+          <h2 class="text-center text-dark" id="tag-font">
             Colleges
           </h2>
         </div>
@@ -185,7 +191,7 @@
 
         <div class="row">
           <div class="col-md-12">
-            <h3 class="text-center text-primary" id="tag-font">
+            <h3 class="text-center text-dark" id="tag-font">
               Scope
             </h3>
           </div>
@@ -203,7 +209,6 @@
             around 10 percent every year.
 
           </p>
-          <hr />
         </div>
       </div>
     </div>
