Eduprov : 03-08-2021 : Add Kewords for more courses

--- a/bca-course.html
+++ b/bca-course.html
@@ -35,8 +35,8 @@
     }
     </script>
   <meta name="description" content="The Bachelor of Computer Application (BCA) is an undergraduate degree course in the Computer Application field. BCA is a 3-year degree course with 6 semesters and it is also available in the long-distance learning course by many universities.">
-  <meta name="keywords" content=" 
-  
+  <meta name="keywords" content=" bachelor of computer application,bsc computer application,bachelor of computer application subjects,ba in computer application,bca bachelor of computer application,bca syllabus 2021,bachelor of commerce computer application,bca in computer application,computer bca,bachelor of computer application admission,bachelor of computer application syllabus,bachelor of computer application salary,bachelor of computer and information sciences in application development,bachelor in computer application course details,bachelor degree in computer application,bachelor of computer application colleges,bca bachelor,bachelor of computer application eligibility,bachelor of computer application scope,bachelor of computer administration,bachelor of computer application course,bachelor of science in computer applications,more like bachelor of computer application,bachelor of business administration computer application,bs computer applications,bachelor in computer application salary,ba in computer application syllabus,bachelor in computer application subjects,best colleges for bachelor of computer application,subjects in bachelor of computer application,bachelor of computer applications subjects,bca 1st semester syllabus 2020,bachelor of computer application fees,bachelor of commerce and computer application,bachelor of science in computer science major in application development,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bachelor of Computer Application Admission Guidance in Bangalore" />
