--- a/bhms-course.html
+++ b/bhms-course.html
@@ -35,8 +35,8 @@
     }
     </script>
   <meta name="description" content="BHMS or Bachelor of Homeopathic Medicine and Surgery is an excellent undergraduate degree in the medical field  that covers the medical knowledge from the homeopathic medical system to train you in the system to become a homeopathic doctor after the completion of your degree at the undergraduate level.">
-  <meta name="keywords" content=" 
-  
+  <meta name="keywords" content=" bachelor of homoeopathic medical and surgery,bachelor of homoeopathic medical and surgery admission,bachelor of homeopathic medicine and surgery,bachelor of homoeopathic medicine and surgery,bachelor of homeopathic medicine & surgery,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Bachelor of Homoeopathic Medical and surgery Admission Guidance in Bangalore" />
