--- a/bishop-cotton-boys-school.html
+++ b/bishop-cotton-boys-school.html
@@ -8,8 +8,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bishop Cotton Boys’ School Admission Guidance in Bangalore</title>
   <script type="application/ld+json">
-  
-  </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bishop-cotton-boys-school.html"
+      },
+      "headline": "Bishop Cotton Boys’ School Admission Guidance in Bangalore",
+      "description": "Bishop Cotton Boys’ School had its genesis in the vision of Bishop George Lynch Cotton of Calcutta. His idea was to set up schools to educate European and Eurasian children of limited means. The idea received support from the Viceroy, Lord Canning. The school in Bangalore became a reality in the hands of Rev. Samuel Thomas Pettigrew, Chaplain of St. Mark’s Church. Bishop Cotton School opened its doors in a humble house on High Grounds on the 19th of April, 1865",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-03",
+      "dateModified": "2021-08-03"
+    }
+    </script>
   <meta name="description" content=" Bishop Cotton Boys’ School had its genesis in the vision of Bishop George Lynch Cotton of Calcutta. His idea was to set up schools to educate European and Eurasian children of limited means. The idea received support from the Viceroy, Lord Canning. The school in Bangalore became a reality in the hands of Rev. Samuel Thomas Pettigrew, Chaplain of St. Mark’s Church. Bishop Cotton School opened its doors in a humble house on High Grounds on the 19th of April, 1865">
   <meta name="keywords" content=" 
   
