--- a/bnm-institute-of-technology.html
+++ b/bnm-institute-of-technology.html
@@ -35,8 +35,8 @@
     }
     </script>
   <meta name="description" content="B.N.M. Institute of Technology is a private technical co-educational school located in Bangalore, Karnataka. The institute was established in the year 2001">
-  <meta name="keywords" content=" 
-  
+  <meta name="keywords" content=" bnm institute of technology,bnmit,bnmit placements,bnmit cutoff,bnmit full form,bnm institute of technology placements,bnmit fee structure,bnm institute of technology admission,bnm institute of technology fee structure,bnm institute of technology cut off,bnm institute of technology ranking,bnm institute of technology review,bnm engineering,bnm institute,bnmit careers,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="BNM Institute of Technology Admission Guidance in Bangalore" />
