--- a/bnys-course.html
+++ b/bnys-course.html
@@ -35,8 +35,8 @@
       }
       </script>
     <meta name="description" content="Naturopathy and Yogic science is a sort of prescribed medication which heals and support the patient in a philosophical way. It isn't kind of supplement, it works around the own recovery of the body like enhancing the immunity and detoxification">
-    <meta name="keywords" content=" 
-    
+    <meta name="keywords" content=" bnys,bnys full form,bnys course,bachelor of naturopathy,bnys admission 2020,naturopathy and yogic science,bnys meaning,bnys course duration,full form of bnys,bnys full form in medical,bachelor of naturopathy and yogic science,bnys degree,bnys admission without neet,jss naturopathy,bachelor of naturopathy & yogic science,naturopathy & yogic science,naturopathy admission,bnys subjects,about bnys course,bnys medical course,bnys naturopathy,bachelor of naturopathy and yoga,bnys admission,bsc yoga and naturopathy,naturopathy and yoga science,bnys need neet,bachelor in yoga and naturopathy,after bnys course,institute of naturopathy & yogic sciences,bnys duration,naturopathy and yogic science course,bnys details,bsc naturopathy and yogic science,bsc in yoga and naturopathy,bnys subjects list,bachelor of naturopathy and yoga science,about bnys,meaning of bnys,yogic science and naturopathy,jss institute of naturopathy,after bnys,bnys course subjects,bachelor of naturopathy online,degree in yoga and naturopathy,naturopathy bachelor degree,svyasa bnys admission 2019,bnys course in open university,bachelor in yoga science,bnys course admission 2020,bnys medicine,bnys without neet,bnys university,dnys medical course,bachelor degree in yoga and naturopathy,bnys admission 2021,duration of bachelor of naturopathy and yogic science course is,bachelor in naturopathy & yogic sciences,bnys admission 2019,bachelor of naturopathy & yogic science admission,
+
     ">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Bachelor Of Naturopathy & Yogic Science Admission Guidance in Bangalore" />
