--- a/bds-course.html
+++ b/bds-course.html
@@ -35,8 +35,8 @@
       }
       </script>
     <meta name="description" content="BDS Admission which is an undergraduate level degree program in the field of oral health care. Candidates who wish to groom their careers in dental surgery  can opt for this course. Science stream of biology group are eligible to pursue this professional course after their 12th. ">
-    <meta name="keywords" content=" 
-    
+    <meta name="keywords" content=" bachelor of dental surgery,bds dental surgery,bachelor of dental surgeon,bachelor of dental surgery duration,bachelor of dental surgery course duration,bachelor of dental surgery kenyatta university,bachelor degree in dental surgery,bachelor of dental surgery course fees,bachelor degree of dental surgery,bachelor of dental surgery fees,bachelor of dental medicine and surgery,bachelor of dental surgery admission,bachelor of dental surgery moi university,
+
     ">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Bachelor of Dental Surgery Admission Guidance in Bangalore" />
