Eduprov 05-07-2021 : update keywords and meta tags and add schema org

--- a/boptm-course.html
+++ b/boptm-course.html
@@ -35,7 +35,8 @@
       }
       </script>
     <meta name="description" content="The Bachelor of Optometry and Vision Science deals with the study of the health issues related to vision. Here you study the function and structure of the visual system, the skills required for clinical assessment">
-    <meta name="keywords" content=" 
+    <meta name="keywords" content=" bachelor of optometry,bsc optometry,bsc optometry course details,bachelor of optometry is a doctor,bachelor of optometry course details,bsc optometry course,bsc in ophthalmology,syllabus of bsc optometry,bachelor of optometry and vision science,bachelor of vision science,bachelor of science in optometry,bachelor of ophthalmology,bsc optometry eligibility,optometry bachelor degree,bachelor of optometry and ophthalmic technology,bsc optometry admission 2020,bachelor of optometry means,bachelor of optometrist,about bsc optometry,bachelor in optometry course,bachelor of clinical optometry,bachelor of optometry syllabus,bsc optometry technology,bsc optometry details,eligibility for bsc optometry,bachelor of optometry fees,bachelor of optometry course,bachelor of optometry australia,bachelor of vision science and master of optometry,bachelor of optometry eligibility,about bsc optometry course,
+
     
     ">
     <meta property="og:type" content="website" />
