--- a/bsc-antropology-course.html
+++ b/bsc-antropology-course.html
@@ -11,8 +11,8 @@
   
   </script>
   <meta name="description" content="Bachelor of Science in Anthropology is a three years long undergraduate degree that is highly in demand, interesting and helps you reach out to people and learn. This course is mainly targeted towards those students who are interested in studying">
-  <meta name="keywords" content=" 
-  
+  <meta name="keywords" content=" bsc anthropology,b sc anthropology,bsc anthropology syllabus,bsc hons anthropology,bsc anthropology du,bsc anthropology subjects,bsc anthropology course details,anthropology syllabus for bsc,anthropology bsc syllabus,b sc anthropology admission,
+
   ">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="B.Sc Anthropology Admission Guidance in Bangalore" />
