--- a/bsc-chemistry-course.html
+++ b/bsc-chemistry-course.html
@@ -2,93 +2,102 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Sc Chemistry Admission Eligibility Scope | Eduprov</title>
-  <meta name="description" content="BSc Chemistry deals with Study of molecules & how they interact. Get all updates on Admission, Top Colleges, Counseling, Entrance Exams & Scope with EDUPROV
-    ">
-  <meta name="keywords" content="">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bsc-chemistry-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B.Sc Chemistry Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bsc-chemistry-course.html"
+      },
+      "headline": "B.Sc Chemistry Admission Guidance in Bangalore",
+      "description": "Bachelor of Science in Chemistry is an undergraduate degree course and its duration is 3years. B.Sc. Chemistry deals with the process of separation, identification,",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-08-05",
+      "dateModified": "2021-08-05"
+    }
+    </script>
+  <meta name="description" content="Bachelor of Science in Chemistry is an undergraduate degree course and its duration is 3years. B.Sc. Chemistry deals with the process of separation, identification,">
+  <meta name="keywords" content=" b sc chemistry,bsc chemistry,chemistry honours,courses after bsc chemistry,after bsc chemistry,chemistry bsc 1st year,bsc chemistry honours,bsc first year chemistry,bsc 2nd year chemistry,medical courses after bsc chemistry,organic chemistry bsc 1st year,chemistry bsc 2nd year,inorganic chemistry bsc 1st year,bsc organic chemistry,bsc 1st year organic chemistry,physical chemistry bsc 1st year,chemistry bsc 3rd year,bsc 3rd year chemistry,best course after bsc chemistry,after bsc chemistry courses list,organic chemistry bsc 2nd year,bsc chemistry course,bsc chemistry eligibility,after bsc chemistry medical courses,organic chemistry bsc 3rd year,professional courses after bsc chemistry,physical chemistry bsc 3rd year,bsc chemistry after courses list,physical chemistry bsc 2nd year,bsc chemistry admission 2020,inorganic chemistry bsc 3rd year,after bsc chemistry which course is better,bsc physical chemistry,bsc chemistry duration,about bsc chemistry,bsc 1st year inorganic chemistry,bsc chemistry course details,bsc chemistry fees,bsc medicinal chemistry,bsc first year physical chemistry,eligibility for bsc chemistry,bsc chemistry 2nd year,bsc second year inorganic chemistry,bsc chemistry in iit,bsc chemistry meaning,bsc chemistry classes,chemistry courses after bsc,chemistry class bsc 1st year,chemistry for bsc 1st year,chemistry related courses after bsc,bsc second year physical chemistry,bsc chemistry online classes,bsc chemistry online course,bsc part 1 chemistry,list of courses after bsc chemistry,organic chemistry for bsc 1st year,bsc final year chemistry,bsc 1st year chemistry class,bsc chemistry degree,bsc physics and chemistry,bsc chemistry 3rd year,bsc second year chemistry,bsc chemistry details,bsc chemistry course duration,physical chemistry for bsc 1st year,organic chemistry bsc 5th sem,bsc chemistry requirements,bsc chemistry related courses,chemistry 3rd year bsc,bsc chemistry qualification,after chemistry honours,chemistry class bsc 2nd year,physical chemistry for bsc,bsc chemistry online,1 year course after bsc chemistry,bsc 1st year physical chemistry,bsc first year ka chemistry,bsc chemistry du,organic chemistry bsc 3rd sem,chemistry in bsc first year,organic chemistry for bsc 2nd year,online courses after bsc chemistry,b sc chemistry admission,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="B.Sc Chemistry Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bsc-chemistry-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Bachelor of Science in Chemistry is an undergraduate degree course and its duration is 3years. B.Sc. Chemistry deals with the process of separation, identification," />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="B.Sc Chemistry Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Bachelor of Science in Chemistry is an undergraduate degree course and its duration is 3years. B.Sc. Chemistry deals with the process of separation, identification," />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
-  <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="blog.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding:50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B.Sc Chemistry</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-2">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1 class="text-dark">B.Sc Chemistry</h1>
       </div>
     </div>
   </div>
+
+  
+
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
